;(rule
;  (targets PGOCaml_config.re)
;  (deps PGOCaml_config.re.in)
;  (action
;    (with-stdout-to PGOCaml_config.re (run ./genconfig.sh))))

(executable
  (name PGOCaml_genconfig)
  (preprocess
    (pps ppx_sexp_conv ppx_deriving.show))
  (modules PGOCaml_genconfig))

(rule
  (targets PGOCaml_config.re)
  (deps PGOCaml_genconfig.exe)
  (action
    (with-stdout-to PGOCaml_config.re (run ./PGOCaml_genconfig.exe))))

(library
  (name PGOCaml)
  (public_name pgocaml)
  (libraries calendar csv hex re rresult sexplib unix)
  (preprocess
    (pps ppx_sexp_conv ppx_deriving.show))
  (wrapped false)
  (modules PGOCaml_aux PGOCaml PGOCaml_generic PGOCaml_config))
